# plan-mcp-ag-server

./: .gitignore  Dockerfile  ENV_FILE_GUIDE.md  ExportedMetadata_Account.csv  ExportedMetadata_CostCenter.csv  ExportedMetadata_Currency.csv  ExportedMetadata_Entity.csv  ExportedMetadata_Future1.csv  ExportedMetadata_Region.csv  ExportedMetadata_Scenario.csv  ExportedMetadata_Version.csv  FIX_CHOCOLATEY_PERMISSIONS.md  FY25_Rooms_Revenue_Analysis.md  IMPLEMENTATION_SUMMARY.md  IMPORTANT_RULES.md  INSTALL_MONGODB.md  INSTALL_POSTGRESQL.md  MEMORIZED_APPROACH.md  MONGODB_MIGRATION.md  PLANNING_FEEDBACK_SETUP.md  README.md  WORKING_FORMAT_DOCUMENTED.md  analyze_revenue_variance_fy25.py  claude_desktop_config.json  dashboard.py  debug_api_format.py  debug_export_data_slice.py  export_data_slice_usage.md  export_rooms_all_dims.py  export_rooms_explicit.py  export_rooms_final.py  export_rooms_fy25.py  export_rooms_minimal.py  export_rooms_no_none.py  export_rooms_object_pov.py  export_rooms_oracle_format.py  export_rooms_revenue_planning.py  export_rooms_revenue_simple.py  export_rooms_substitution.py  export_top_products_revenue.py  (+59 more)
.claude/: settings.local.json
cli/: __init__.py  main.py  mcp_server.py
planning_agent/: __init__.py  agent.py  config.py
planning_agent/client/: __init__.py  mock_data.py  planning_client.py
planning_agent/services/: __init__.py  feedback_service.py  rl_service.py
planning_agent/tools/: __init__.py  application.py  data.py  dimensions.py  documents.py  feedback.py  jobs.py  (+2 more)
scripts/: init_db.py
web/: __init__.py  server.py
(+2 files in other folders)
